src/test/resources/validation/error/implicitJoinViaNonExistentPath/schema.graphqls
type Query {
  customer(id: ID!): Customer
}

type Customer @table {
  id: ID!
  #there is no path from CUSTOMER to FILM, via ADDRESS
  films: [Film!]! @splitQuery @reference(via: [{table: "ADDRESS"}])
}


type Film @table {
  id: ID!
}

